--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="png" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description"
+        content="تطبيق بسيط وفعّال لتتبع طلبات التوظيف، يساعدك على تسجيل الوظائف، تحديث حالتها، تمييز المفضلة، وتنظيم رحلة البحث عن وظيفة بسهولة."
+    />
     <title>H_Jobsapp</title>
   </head>
   <body dir="rtl">
